[package]
name = "lanyue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
salvo = { version = "0.44.1", features = ["affix", "serve-static", "session", "rate-limiter", "cache", "logging"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0.164"
chrono = "0.4.26"
tera = "1.19.0"
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "macros", "migrate"] }
toml = "0.7.5"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rust-crypto = "^0.2"
regex = "1.9.0"
json = "0.12.4"
visdom = "0.5.10"
pulldown-cmark = "0.9.3"
image = "0.24.6"
anyhow = "1.0.71"
tinylfu-cached = "0.0.4"
serde_json = "1.0.102"
rand = "0.8.5"
delay_timer = "0.11.4"
smol = "1.3.0"
rust-embed= { version = "6.4.0", features = ["include-exclude"] }
reqwest = { version = "0.11.18", features = ["json"] }
tokio-test = "0.4.2"

